--- a/cmactions/res/xml/touchscreen_panel.xml
+++ b/cmactions/res/xml/touchscreen_panel.xml
@@ -76,7 +76,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@*cyanogenmod.platform:string/touchscreen_gesture_extras">
+        android:title="@*mokee.platform:string/touchscreen_gesture_extras">
 
         <SwitchPreference
             android:key="proximity_wake_enable"
@@ -87,8 +87,8 @@
         <SwitchPreference
             android:key="touchscreen_gesture_haptic_feedback"
             android:persistent="false"
-            android:title="@*cyanogenmod.platform:string/touchscreen_gesture_haptic_feedback"
-            android:summary="@*cyanogenmod.platform:string/touchscreen_gesture_haptic_feedback_summary" />
+            android:title="@*mokee.platform:string/touchscreen_gesture_haptic_feedback"
+            android:summary="@*mokee.platform:string/touchscreen_gesture_haptic_feedback_summary" />
 
     </PreferenceCategory>
 
